manifests/ingress-rollouts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-rollouts-dashboard
  namespace: argo-rollouts
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  labels:
    ingress.tmaxcloud.org/name: argo-rollouts
spec:
  rules:
  - host: argorollouts.nhn.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-rollouts-dashboard
            port:
              name: https-rollouts
  tls:
  - hosts:
    - argocdrollouts.nhn.nip.io
